@@ -1,3 +1,6 @@
+* Sun Sep 17 2022 Trevor Vaughan <trevor@sicura.us> - 8.3.0
+- Add Amazon Linux 2 support
+
 * Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
